[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/arrow_button_up.png" type="Texture" id=1]
[ext_resource path="res://assets/arrow_button_down.png" type="Texture" id=2]
[ext_resource path="res://scenes/editor/NumEdit.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.3488, 0.336, 0.4, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.178667, 0.168, 0.2, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.231373, 0.223529, 0.262745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.168627, 0.160784, 0.192157, 1 )
border_blend = true

[node name="NumEdit" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_top = 293.0
margin_right = 505.0
margin_bottom = 307.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 505.0
margin_right = 1010.0
margin_bottom = 600.0
size_flags_horizontal = 3
text = "24"
caret_blink = true
caret_blink_speed = 0.5

[node name="V" type="VBoxContainer" parent="."]
margin_left = 1010.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="Increase" type="Button" parent="V"]
margin_right = 14.0
margin_bottom = 300.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 1 )
expand_icon = true

[node name="Decrease" type="Button" parent="V"]
margin_top = 300.0
margin_right = 14.0
margin_bottom = 600.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 2 )
expand_icon = true

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="V/Increase" to="." method="_on_Increase_pressed"]
[connection signal="pressed" from="V/Decrease" to="." method="_on_Decrease_pressed"]
